client/src/components/form/PaymentDetailsForm.css
.info-alert{
    margin: 8px;
}

.card-details{
    padding: 24px;
    background: #fbfbfb;
    border: 1px solid #d9d9d9;
    border-radius: 6px;
}

.ant-radio-button-wrapper {
    padding: 0px;
    height:auto;
    width: auto
}

img.seats {
    width: 100%;
}

@media only screen and (min-width: 768px) {
    img.seats {
        width: auto;
    }
}

